// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fileSystem reducer should return state after edit code 1`] = `
Object {
  "currentFile": "",
  "error": null,
  "isEdited": true,
}
`;

exports[`fileSystem reducer should return state after file delete failure 1`] = `
Object {
  "currentFile": "",
  "error": null,
}
`;

exports[`fileSystem reducer should return state after file open failure 1`] = `
Object {
  "currentFile": "",
  "error": "open error",
}
`;

exports[`fileSystem reducer should return state after file open success 1`] = `
Object {
  "currentFile": undefined,
  "error": null,
  "isEdited": false,
}
`;

exports[`fileSystem reducer should return state after file save failure 1`] = `
Object {
  "currentFile": "",
  "error": "save error",
}
`;

exports[`fileSystem reducer should return state after file save success 1`] = `
Object {
  "currentFile": undefined,
  "error": null,
  "isEdited": false,
}
`;

exports[`fileSystem reducer should return the initial state 1`] = `
Object {
  "currentFile": "",
  "error": null,
}
`;
